# quartre_con

./: Cargo.toml  README.md
src/: game.rs  lib.rs  main.rs  tree.rs
src/board/: board.rs  board_move.rs  mod.rs  piece.rs  square.rs
src/player/: bot.rs  human.rs  mod.rs  random.rs
