[package]
name = "quatre_con"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
rand = "0.8.5"
rstest = "0.18.2"
thiserror = "1.0.56"
